# energy-ml-serving

./: .gitattributes  .gitignore  README.md  _run_inferences.sh  _run_one_inference.sh  code_slm_selection.xlsx  pyproject.toml  repeat.sh  requirements.txt  requirements_runtime_engines.txt  run_inferences.sh  runall.sh  runall_update.sh  start_server.py  start_server.sh  utils.py
app/: _test_models.py  api_code.py  api_code_load.py  models.py  models_code.py  models_code_load.py  schemas_code.py  utils_api.py
dataset/: RandomHumanEval.jsonl  RandomHumanEval.txt
diagrams/: README.md
experiments/: 01_add_info_prefix_processed.ipynb  01_get_info_energibridge.ipynb  01_get_info_energibridge.py  01_get_info_energibridge_other.py  01_get_info_nvidia.ipynb  01_get_info_nvidia.py  01_get_info_nvidia_other.py  01_get_info_wattmeter.ipynb  01_get_info_wattmeter.py  02_add_time_marks_processed.ipynb  02_get_time_marks.ipynb  02_get_time_marks.py  03_02_aggregation.ipynb  03_03_aggregated_plots.ipynb  03_analysis.ipynb  03_analysis_cpu.ipynb  03_analysis_cudaep.ipynb  04-tests.ipynb  04_test_03.ipynb  04_test_03.py  05_aggregated_plots.ipynb  05_test_nov.ipynb  06_analysis_nov.ipynb  06_tests.ipynb  07_result_tables.ipynb  07_tests_merge.ipynb  08_analysis.ipynb  08_analysis_nov.ipynb  09_result_tables_nov.ipynb  09_result_tables_nov_separated.ipynb  _04-tests.ipynb  _04_test_02.ipynb  _04_tests_01.ipynb  _april_intel_pwr_data_03-results10.ipynb  _visualize_energibridge_june.ipynb  _visualize_nvidia_june.ipynb  _visualize_wattmeter_june.ipynb  join_datasets.ipynb  (+4 more)
(+110 files in other folders)
