[tool.poetry]
name = "energy-ml-serving"
version = "0.1.0"
description = ""
authors = ["fjdurlop <fjdurlop0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
fastapi = "^0.109.0"
torch = "^2.1.2"
transformers = "^4.37.1"
onnx = "^1.15.0"
optimum = {extras = ["exporters", "nncf", "onnxruntime", "openvino"], version = "^1.16.2"}
codecarbon = "^2.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
